# linghe

./: .aci.yml  .gitignore  README.md  build.sh  pyproject.toml  setup.py  t.sh
asserts/: api.md
benchmark/: bench_channel.py  bench_channel_gemm.py  bench_gemm.py  bench_hadamard.py  bench_loss.py  bench_ops.py  bench_permutation.py  bench_rmsnorm.py  bench_scale_mm.py  bench_smooth.py  bench_util.py  flops_profile.py  profile.py
debug/: bug.ptx  eval_block_quant.py  eval_channel_quant.py  eval_hadamard_quant.py  eval_outlier_quant.py  eval_smooth_quant.py  exception.py  preprocess.py  suc.ptx  test_backward.py  test_compile.py  test_dist_grad.py  test_dist_moe.py  test_fp32_accum.py  test_gmm.py  test_scaled_mm.py  test_smooth_grad.py  test_streams.py  test_tma.py  triton_bug.py
docs/: api.md  index.html  linghe.html  search.js
docs/api/: linghe.html
docs/api/linghe/: gemm.html  quant.html
docs/linghe/: facade.html  gemm.html  quant.html  utils.html
docs/linghe/facade/: add.html  fp32_gemm.html  fp32_linear.html  hadamard_quant_linear.html  loss.html  norm.html  rope.html  smooth_quant_linear.html  transpose.html
docs/linghe/gemm/: blockwise_fp8_gemm.html  channelwise_fp8_gemm.html  fp32_gemm.html
docs/linghe/quant/: block.html  channel.html  group.html  hadamard.html  smooth.html
docs/linghe/utils/: add.html  dot.html  gather.html  loss.html  norm.html  (+6 more)
flops/core/: hadamard_quant_linear.py  smooth_quant_experts.py
flops/facade/: add.py  fp32_linear.py  gemm.py  hadamard_quant_linear.py  loss.py  norm.py  rmsnorm.py  rope.py  smooth_quant_experts.py  smooth_quant_linear.py  transpose.py
flops/gemm/: blockwise_fp8_gemm.py  channelwise_fp8_gemm.py  fp32_gemm.py  fp32_tma_gemm.py  fp8_gemm.py  fp8_tma_gemm.py  tile_fp8_gemm.py
flops/quant/: channel.py  copy.cu  cuda_quant.py  hadamard.py  quant.cu  quantize.py  smooth.py  tile.py
flops/tools/: benchmark.py  util.py
flops/utils/: add.py  benchmark.py  chunk.py  dot.py  gather.py  loss.py  norm.py  pad.py  permute.py  rearange.py  reduce.py  rms.py  rope.py  scatter.py  silu.py  tma.py  transpose.py  unary.py  util.py
linghe/facade/: add.py  fp32_gemm.py  fp32_linear.py  hadamard_quant_linear.py  loss.py  norm.py  rope.py  smooth_quant_linear.py  transpose.py
linghe/gemm/: blockwise_fp8_gemm.py  channelwise_fp8_gemm.py  fp32_gemm.py
linghe/quant/: block.py  channel.py  group.py  hadamard.py  smooth.py
linghe/tools/: benchmark.py  util.py
linghe/utils/: add.py  dot.py  gather.py  loss.py  norm.py  rearange.py  reduce.py  rope.py  scatter.py  silu.py  transpose.py
tests/: bench_h20.py  bench_h800.py  bench_h800_smooth.py  preprocess.py  test.sh  test_add.py  test_backward.py  test_block_quant.py  test_channel.py  test_channel_quant.py  test_dist_moe.py  test_dot.py  test_fp32_gemm.py  test_fuse_smooth.py  test_gather.py  test_gemm.py  test_gmm.py  test_group_quant.py  test_hadamard.py  test_hadamard_quant.py  test_loss.py  test_norm.py  test_os.py  test_outlier.py  test_pad.py  test_rearange.py  test_reduce.py  test_rope.py  test_scatter.py  test_silu.py  test_smooth.py  test_smooth_quant.py  test_streams.py  test_tile_block.py  test_transpose.py  test_unary.py  test_util.py
(+37 files in other folders)
